# murmur-tts-reader

./: .dockerignore  .env.example  .gitignore  .nuxtignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  app.vue  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  drizzle.config.ts  error.vue  next.config.ts  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
alignment-server/: Dockerfile  main.py  pyproject.toml
alignment-server/tests/: test_align.py
app/: layout.tsx  page.tsx
caddy/: setup.html
components/: AppHeader.vue  AppSidebar.vue  AudioPlayer.client.vue  BookmarkAddModal.vue  BookmarkList.vue  EngineSelector.vue  LibraryCard.vue  LibraryGrid.vue  ReaderView.client.vue  TextInput.vue  VoiceCloneModal.vue  VoiceSelector.vue  WordHighlighter.client.vue
composables/: useAudioPlayer.ts  useAudioStorage.ts  useAuth.ts  useBackends.ts  useBackgroundSync.ts  useBookmarks.ts  useDatabase.ts  useGeneration.ts  useLibrary.ts  useOffline.ts  useQueue.ts  useSettings.ts  useTTS.ts  useVoices.ts
cosyvoice-server/: main.py  pyproject.toml
docs/: 2026-04-06-dockerizing-five-tts-engines.md  tutorial.md
f5tts-server/: post_install.py  pyproject.toml
frontend/: Dockerfile  drizzle.config.ts  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
gptsovits-server/: .gitignore  post_install.py  pyproject.toml
layouts/: default.vue
orchestrator/: Dockerfile  auth.py  config.py  db.py  engine_manager.py  engine_registry.py  job_events.py  job_worker.py  main.py  models.py  pyproject.toml  rate_limit.py  schema.sql  sentence_splitter.py
orchestrator/routers/: auth_router.py  backends.py  bookmarks.py  health.py  queue.py  reads.py  settings.py  voices.py
orchestrator/tests/: conftest.py  test_auth.py  test_backends.py  test_bookmarks.py  test_engine_manager.py  test_engine_registry.py  test_generate.py  test_health.py  test_job_events.py  test_job_worker.py  test_queue.py  test_reads.py  test_sentence_splitter.py  test_settings.py  test_startup_recovery.py  test_tenant_isolation.py  test_voices.py  test_voices_sync.py
pages/: index.vue  login.vue  new.vue  queue.vue  register.vue  settings.vue  voices.vue
pocket-tts-server/: .gitignore  main.py  post_install.py
shared/: schema.ts
types/: api.ts  db.ts  (+1 more)
(+83 files in other folders)
