[project]
name = "murmur-alignment-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "whisperx>=3.3.1",
    "torch>=2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=9.0",
    "pytest-asyncio>=1.3.0",
]
